Change Resume to render objects of objects properly and fix spacing between items of education

--- a/src/styles/Resume.css
+++ b/src/styles/Resume.css
@@ -47,6 +47,7 @@ svg {
     display: flex;
     flex-direction: column;
     align-content: center;
+    gap: 20px;
 }
 
 .item {
